--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
 					</image>
 				</configuration>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+           		<version>3.8.1</version> <!-- Cambia a la versión compatible con tu configuración -->
+            	<configuration>
+                	<source>1.8</source>
+                	<target>1.8</target>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
